--- a/packages/web/app/layout.module.scss
+++ b/packages/web/app/layout.module.scss
@@ -2,4 +2,5 @@
 .menuOpen {
     position: fixed;
     top: 0;
+    width: 100%;
 }
